welcome.lessons.welcome.bat.bool1.MonkeyTrouble.scala.code
def monkeyTrouble(aSmile:Boolean, bSmile:Boolean): Boolean = {
	if (aSmile && bSmile ) 
	{ return true
	}
	else {
	       if(aSmile==false && bSmile==false) {
		  return true 
	}
	if (aSmile||bSmile ) {
	return false 	
	}
}
}
